[package]
name = "nettap"
version = "0.1.0"
authors = ["Ben Lipton <ben.lipton@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5.4"
clap-verbosity-flag = "0.3.1"
failure = "0.1.5"
futures = "0.3.0"
log = "0.4.8"
structopt = "0.2.18"
tokio = { version = "0.2.13", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
